添加漏洞信息相关字段

--- a/common/vulinbox/auto_route.html
+++ b/common/vulinbox/auto_route.html
@@ -53,7 +53,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     {{range .VulnInfos}}
-                    <li class="list-group-item"><a target="_blank" href="{{.Path}}{{.Query}}">{{.RouteName}}</a></li>
+                    <li class="list-group-item"><a target="_blank" href="{{.Path}}{{.DefaultQuery}}">{{.RouteName}}</a></li>
                     {{end}}
                 </ul>
             </div>
