--- a/common/vulinbox/vul_cryptojs_rsa_keyfromserver_withresponse.html
+++ b/common/vulinbox/vul_cryptojs_rsa_keyfromserver_withresponse.html
@@ -14,6 +14,10 @@
 
 <div class="container">
     <h1 class="mt-4">RSA-OAEP 需要加密提交的表单内容 (密钥来源服务器，响应也加密) </h1>
+    <div class="alert">
+        <p>密钥通过服务器加载，您需要前置获取服务器对应的加密密钥</p>
+        <p>这个表单的登录信息被加密在响应中，您需要破解加密才能知道是否爆破成功</p>
+    </div>
     <form id="json-form" class="mt-4">
         <div class="mb-3">
             <label for="username" class="form-label">UserName</label>
