--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -320,7 +320,7 @@
                     验证码场景
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href='/verification/op' target="_blank">基础验证码拦截的表单提交</a>
+                    <li class="list-group-item"><a href='/verification/op' target="_blank">基础验证码拦截的表单提交（无法爆破）</a>
                     </li>
                 </ul>
                 <ul class="list-group list-group-flush">
