--- a/common/vulinbox/verificationcode/op.html
+++ b/common/vulinbox/verificationcode/op.html
@@ -29,8 +29,9 @@
 <body>
 <div>
     <pre>
-        你好，这儿有一片超级秘密的文章，但是你需要输入验证码和密码。
+        你好，这儿有一篇超级秘密的文章，但是你需要输入验证码和密码。
         密码差不多是四位数字，但是是为了防止你爆破加了验证码，所以你得想点办法。
+        <p>这个验证码的实现，大概率是安全的，所以爆破是一个很难的事儿</p>
     </pre>
     <img src="/verification/code">
     <br>
