--- a/common/vulinbox/verificationcode/op1.html
+++ b/common/vulinbox/verificationcode/op1.html
@@ -31,7 +31,7 @@
     <pre>
         你好，这儿有一篇超级秘密的文章，但是你需要输入验证码和密码。
         密码差不多是四位数字，但是是为了防止你爆破加了验证码，所以你得想点办法。
-        但是这个验证码是有问题的，你可以试试看。
+        <strong>但是这个验证码是有问题的，你可以试试看。</strong>
     </pre>
     <img src="/verification/bad/code">
     <br>
