--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -399,15 +399,19 @@
     inputForm.addEventListener("input", function () {
         const searchData = decodeURIComponent(`${inputForm.value.toLowerCase()}`);
         items.forEach(function (item) {
-            const alink = item.childNodes[0];
-            if (alink.nodeType === Node.ELEMENT_NODE) {
-                let searchItem = (alink.getAttribute("href") + "|" + item.textContent).toLowerCase();
-                if (searchItem.indexOf(searchData) !== -1) {
-                    item.style.display = "block";
-                } else {
-                    item.style.display = "none";
+            item.childNodes.forEach(function (child) {
+                if (child.nodeName.toLowerCase() === 'a') {
+                    const alink = child;
+                    if (alink.nodeType === Node.ELEMENT_NODE) {
+                        let searchItem = (alink.getAttribute("href") + "|" + item.textContent).toLowerCase();
+                        if (searchItem.indexOf(searchData) !== -1) {
+                            item.style.display = "block";
+                        } else {
+                            item.style.display = "none";
+                        }
+                    }
                 }
-            }
+            });
         });
         document.querySelectorAll(".col-md-6").forEach(function (cardWrapper) {
             if (cardWrapper.querySelectorAll(".list-group-item").length === cardWrapper.querySelectorAll(".list-group-item[style='display: none;']").length) {
