--- a/common/crep/static/navtab.html
+++ b/common/crep/static/navtab.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MITM</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link data-react-helmet="true" rel="shortcut icon" href="/static/favicon.ico">
 
     <style>
         html,
@@ -64,8 +65,7 @@
         }
 
         .mitm-container .mitm-footer .mitm-footer-text {
-            text-indent: 2em;
-            text-align: left;
+            text-align: center;
             color: #9498aa;
         }
 
@@ -110,7 +110,7 @@
                 </a>
                 ”安装证书，安装教程参考：
                 <a class="down-link" target="_blank"
-                    href="https://song-feat-suportchangelang.yaklang-github-io.pages.dev/products/expert-mode/mitm/hijack-configuration/">https://song-feat-suportchangelang.yaklang-github-io.pages.dev/products/expert-mode/mitm/hijack-configuration/</a>
+                    href="https://yaklang.com/products/expert-mode/mitm/hijack-configuration/" style="color: #f28b44" >官方教程</a>
             </div>
         </div>
     </div>
