--- a/common/crep/static/navtab.html
+++ b/common/crep/static/navtab.html
@@ -61,12 +61,25 @@
         }
 
         .mitm-container .mitm-footer {
-            height: 100px;
+            height: 75px;
         }
 
         .mitm-container .mitm-footer .mitm-footer-text {
             text-align: center;
             color: #9498aa;
+        }
+
+        #windows-shortcut input[role="button"]:hover, input[role="button"]:active, input[role="button"]:focus, #mac-shortcut input[role="button"]:hover, input[role="button"]:active, input[role="button"]:focus {
+            outline: none;
+            box-shadow: none;
+            cursor: default;
+        }
+
+        #windows-shortcut input, #mac-shortcut input {
+            color: #f6a94f;
+            border-radius: 8px;
+            font-size: 13px;
+            border: 1px solid #f6a94f;
         }
 
         .mitm-container .mitm-footer .mitm-footer-text .certificate-down {
@@ -83,37 +96,60 @@
 </head>
 
 <body>
-    <div class="container text-center mitm-container">
-        <div class="row justify-content-center align-items-center mitm-search">
-            <div class="col-7">
-                <a href="#">
-                    <img src="/static/yakit-logo.png" height="60" alt="mitmproxy logo" />
-                </a>
-                <div class="input-group mb-3 mitm-search-input-group">
-                    <input type="text" class="form-control form-control-lg" placeholder="请输入目标地址开始劫持"
-                        aria-describedby="mitm-search-btn" id="mitm-search-input">
-                    <button class="btn mitm-search-btn" type="button" id="mitm-search-btn">开始劫持</button>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center align-items-center mitm-footer">
-            <div class="col-9 mitm-footer-text">
-                如需使用其他浏览器，请点击“
-                <a class="certificate-down" href="/download-mitm-crt" target="_blank">
-                    <span>证书下载</span>
-                    <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4016" width="20"
-                        height="20">
-                        <path
-                            d="M341.333333 640a42.666667 42.666667 0 0 1-42.666666 42.666667H256a170.666667 170.666667 0 0 1-40.277333-336.554667 298.709333 298.709333 0 0 1 570.154666-81.408A213.333333 213.333333 0 0 1 725.333333 682.666667a42.666667 42.666667 0 0 1 0.042667-85.333334 128 128 0 0 0 36.394667-250.794666l-38.144-11.264-15.914667-36.437334a213.376 213.376 0 0 0-407.296 58.026667l-7.381333 58.368-57.173334 13.824A85.418667 85.418667 0 0 0 256 597.333333h42.666667a42.666667 42.666667 0 0 1 42.666666 42.666667z m321.706667 87.338667a42.666667 42.666667 0 0 1 0 60.330666l-120.917333 120.832c-16.682667 16.64-43.690667 16.64-60.373334 0l-120.917333-120.832a42.666667 42.666667 0 0 1 60.330667-60.330666L469.333333 775.509333V426.666667a42.666667 42.666667 0 0 1 85.333334 0v348.714666l48.042666-48.042666a42.666667 42.666667 0 0 1 60.330667 0z"
-                            fill="#f28b44" p-id="4017"></path>
-                    </svg>
-                </a>
-                ”安装证书，安装教程参考：
-                <a class="down-link" target="_blank"
-                    href="https://yaklang.com/products/expert-mode/mitm/hijack-configuration/" style="color: #f28b44" >官方教程</a>
+<div class="container text-center mitm-container">
+    <div class="row justify-content-center align-items-center mitm-search">
+        <div class="col-7">
+            <a href="#">
+                <img src="/static/yakit-logo.png" height="60" alt="mitmproxy logo"/>
+            </a>
+            <div class="input-group mb-3 mitm-search-input-group">
+                <input type="text" class="form-control form-control-lg" placeholder="请输入目标地址开始劫持"
+                       aria-describedby="mitm-search-btn" id="mitm-search-input">
+                <button class="btn mitm-search-btn" type="button" id="mitm-search-btn">开始劫持</button>
             </div>
         </div>
     </div>
+    <div class="row justify-content-center align-items-center mitm-footer">
+        <div class="col-9 mitm-footer-text">
+            如需使用其他浏览器，请点击“
+            <a class="certificate-down" href="/download-mitm-crt" target="_blank">
+                <span>证书下载</span>
+                <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4016" width="20"
+                     height="20">
+                    <path
+                            d="M341.333333 640a42.666667 42.666667 0 0 1-42.666666 42.666667H256a170.666667 170.666667 0 0 1-40.277333-336.554667 298.709333 298.709333 0 0 1 570.154666-81.408A213.333333 213.333333 0 0 1 725.333333 682.666667a42.666667 42.666667 0 0 1 0.042667-85.333334 128 128 0 0 0 36.394667-250.794666l-38.144-11.264-15.914667-36.437334a213.376 213.376 0 0 0-407.296 58.026667l-7.381333 58.368-57.173334 13.824A85.418667 85.418667 0 0 0 256 597.333333h42.666667a42.666667 42.666667 0 0 1 42.666666 42.666667z m321.706667 87.338667a42.666667 42.666667 0 0 1 0 60.330666l-120.917333 120.832c-16.682667 16.64-43.690667 16.64-60.373334 0l-120.917333-120.832a42.666667 42.666667 0 0 1 60.330667-60.330666L469.333333 775.509333V426.666667a42.666667 42.666667 0 0 1 85.333334 0v348.714666l48.042666-48.042666a42.666667 42.666667 0 0 1 60.330667 0z"
+                            fill="#f28b44" p-id="4017"></path>
+                </svg>
+            </a>
+            ”安装证书，安装教程参考：
+            <a class="down-link" target="_blank"
+               href="https://yaklang.com/products/expert-mode/mitm/hijack-configuration/"
+               style="color: #f28b44">官方教程</a>
+        </div>
+        <div class="col-9 mitm-footer-text">
+            <span>如需打开无痕窗口，可以使用快捷键 :</span>
+
+            <span id="windows-shortcut" style="display: none;">
+                    <input value="CTRL" aria-label="CTRL" role="button" type="submit" disabled>
+                    <span> + </span>
+                    <input value="SHIFT" aria-label="SHIFT" role="button" type="submit" disabled>
+                    <span> + </span>
+                    <input value="N" aria-label="N" role="button" type="submit" disabled>
+                </span>
+
+            <span id="mac-shortcut" style="display: none;">
+
+                    <input value="⌘" aria-label="CTRL" role="button" type="submit" disabled>
+                    <span> + </span>
+                    <input value="⇧" aria-label="SHIFT" role="button" type="submit" disabled>
+                    <span> + </span>
+                    <input value="N" aria-label="N" role="button" type="submit" disabled>
+                </span>
+
+
+        </div>
+    </div>
+</div>
 </body>
 <script src="/static/js/jquery-3.6.0.min.js"></script>
 
@@ -136,6 +172,23 @@
     function locationUrlHandler(url) {
         return url.startsWith("http") ? url : "https://" + url
     }
+
+    $(document).ready(function () {
+        // 获取操作系统信息
+        let OSName = "Unknown";
+        if (window.navigator.userAgent.indexOf("Windows NT") !== -1) OSName = "Windows";
+        if (window.navigator.userAgent.indexOf("Mac") !== -1) OSName = "MacOS";
+
+        // 根据操作系统显示对应的快捷键
+        if (OSName === "Windows") {
+            $('#windows-shortcut').show();
+        } else if (OSName === "MacOS") {
+            $('#mac-shortcut').show();
+        } else {
+            console.log("未知的操作系统");
+        }
+    });
+
 </script>
 
 </html>
