--- a/common/vulinbox/html/route.html
+++ b/common/vulinbox/html/route.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="/_/ws">WS Proto Agent</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" target="_blank" href="/_/submit-ai-practice">AI 训练集测试：AI-Knowledge-Base Practice</a>
+                    </li>
                 </ul>
             </div>
         </div>
