--- a/common/vulinbox/html/vul_cryptojs_basic.html
+++ b/common/vulinbox/html/vul_cryptojs_basic.html
@@ -8,21 +8,20 @@
     <title>CryptoJS 加密表单提交（AES-ECB Pkcs7padding）</title>
 
     <!-- 引入 CDN Crypto.js 开始 AES加密 注意引入顺序 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/enc-base64.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/md5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/evpkdf.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/cipher-core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/aes.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/pad-pkcs7.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/mode-ecb.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/enc-utf8.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/enc-hex.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/core.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/enc-base64.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/md5.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/evpkdf.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/cipher-core.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/aes.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/pad-pkcs7.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/mode-ecb.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/enc-utf8.min.js"></script>
+    <script src="/static/js/cryptojs_4.0.0/enc-hex.min.js"></script>
     <!-- 引入 CDN Crypto.js 结束 -->
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -126,8 +125,8 @@
 </script>
 
 <!-- Add Bootstrap JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap_5.3/popper.min.js"></script>
+<script src="/static/js/bootstrap_5.3/bootstrap.min.js"></script>
 
 </body>
 </html>
