--- a/common/vulinbox/html/vul_csrf_unsafe.html
+++ b/common/vulinbox/html/vul_csrf_unsafe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
