--- a/common/vulinbox/html/vul_cryoto_sm_sm4.html
+++ b/common/vulinbox/html/vul_cryoto_sm_sm4.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CryptoJS 加密表单提交（SM4-ECB Pkcs7padding）</title>
 
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
