--- a/common/vulinbox/html/vul_cryptojs_basic.html
+++ b/common/vulinbox/html/vul_cryptojs_basic.html
@@ -21,7 +21,7 @@
     <!-- 引入 CDN Crypto.js 结束 -->
 
 
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
