--- a/common/vulinbox/html/vul_fastjson.html
+++ b/common/vulinbox/html/vul_fastjson.html
@@ -36,8 +36,8 @@
 </div>
 
 <!-- 引入 Bootstrap JavaScript -->
-<script src="/static/js/mall/jquery.min.js"></script>
+<script src="/static/js/jquery_1.10.2/jquery.min.js"></script>
 <script src="/static/js/bootstrap_5.3/popper.min.js"></script>
-<script src="/static/js/mall/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap_5.3/bootstrap.min.js"></script>
 </body>
 </html>
