--- a/common/vulinbox/html/vul_login_jwt_login.html
+++ b/common/vulinbox/html/vul_login_jwt_login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录表单</title>
     <!-- 引入 Bootstrap CSS -->
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
