--- a/common/vulinbox/html/vul_cryptojs_rsa_keyfromserver_withresponse.html
+++ b/common/vulinbox/html/vul_cryptojs_rsa_keyfromserver_withresponse.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RSA-OAEP 加密(密钥来源服务器)</title>
 
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
