--- a/common/vulinbox/html/vul_cryptojs_template.html
+++ b/common/vulinbox/html/vul_cryptojs_template.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CryptoJS 加密表单提交（AES-ECB Pkcs7padding）</title>
 
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
