--- a/common/vulinbox/html/vul_user_profile.html
+++ b/common/vulinbox/html/vul_user_profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
-    <link rel="stylesheet" href="/static/css/mall/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/js/bootstrap_5.3/bootstrap.min.css">
 </head>
 <style>
     #codeSnippet {
