--- a/common/vulinbox/html/vul_user_register.html
+++ b/common/vulinbox/html/vul_user_register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="/static/css/mall/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
