refactor: update HTML files to use local static resources instead of … (#2550)
* refactor: update HTML files to use local static resources instead of CDN links

* fix regexp

* fix path

* fix path

* fix fastjson test

* fix test

---------

Co-authored-by: z3 <z3r0ne@163.com>

--- a/common/vulinbox/html/vul_cryptojs_template.html
+++ b/common/vulinbox/html/vul_cryptojs_template.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CryptoJS 加密表单提交（AES-ECB Pkcs7padding）</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -107,8 +106,8 @@
 </script>
 
 <!-- Add Bootstrap JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap_5.3/popper.min.js"></script>
+<script src="/static/js/bootstrap_5.3/bootstrap.min.js"></script>
 
 </body>
 </html>
