--- a/common/vulinbox/html/vul_user_login.html
+++ b/common/vulinbox/html/vul_user_login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.0-alpha1/css/bootstrap.min.css"
+    <link href="/static/js/bootstrap_5.3/bootstrap.min.css"
           rel="stylesheet">
 </head>
 
